[package]
name = "rpltree"
version = "0.1.0"
edition = "2021"
authors = ["Thibaut Vandervelden <thvdveld@vub.be>", "Diana Deac"]
description = "A PCAP parser to display the RPL tree from RPL ICMP messages."
documentation = "https://docs.rs/rpltree/"
homepage = "https://github.com/thvdveld/rpltree"
repository = "https://github.com/thvdveld/rpltree"
readme = "README.md"
keywords = ["RPL", "pcap", "tree"]
categories = ["network-programming"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.0.2", features = ["derive"] }
colored = "2.0.0"
rand = "0.8.5"
rtshark = "2.3.1"
termtree = "0.4.0"
