[package]
name = "rpltree"
version = "0.2.0"
edition = "2021"
authors = ["Thibaut Vandervelden <thvdveld@vub.be>", "Diana Deac"]
description = "A PCAP parser to display the RPL tree from RPL ICMP messages."
documentation = "https://docs.rs/rpltree/"
homepage = "https://github.com/thvdveld/rpltree"
repository = "https://github.com/thvdveld/rpltree"
readme = "README.md"
keywords = ["RPL", "pcap", "tree"]
categories = ["network-programming"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.0.2", features = ["derive"] }
colored = "2.0.0"
env_logger = "0.9.1"
log = "0.4.17"
pcap = "0.10.1"
rand = "0.8.5"
smoltcp = "0.8.1"
termtree = "0.4.0"

[patch.crates-io]
smoltcp = { git = 'https://github.com/thvdveld/smoltcp/', branch = "rpl-wire" }
